#12 refactor: toList 변경